[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PersonalBPNet"
version = "0.1.0"
description = "A small modification to bpnetlite's BPNet to accomodate large validation datasets."
authors = [{ name = "Adam He", email = "adamyhe@gmail.com" }]
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/adamyhe/PersonalBPNet" }
requires-python = ">= 3.9"
dependencies = ["bpnet-lite>=0.8.1"]

[tool.setuptools]
packages = ["personal_bpnet"]
