[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PersonalBPNet"
version = "0.6.3"
description = "A small modification to bpnetlite's BPNet to accomodate large validation datasets."
authors = [{ name = "Adam He", email = "adamyhe@gmail.com" }]
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/adamyhe/PersonalBPNet" }
requires-python = ">= 3.9"
dependencies = ["bpnet-lite<=0.9.0", "tangermeme>=1.0.0", "pyfastx"]

[tool.setuptools]
packages = ["personal_bpnet"]

[project.scripts]
clipnet = "personal_bpnet.cli_clipnet:cli"
pausenet = "personal_bpnet.cli_pausenet:cli"
clipnet_tf = "personal_bpnet.cli_tf:cli"
